FTB-Community/force-app/main/default/objects/FTB_CMT_HeaderConfigurations__mdt/FTB_CMT_HeaderConfigurations__mdt.object-meta.xml
<CustomObject>
    <description>FTB Custom Metadata type for header configurations</description>
    <label>Header Configuration</label>
    <pluralLabel>Header Configurations</pluralLabel>
</CustomObject>