FTB-Community/force-app/main/default/objects/FTB_CMT_HeaderConfigurations__mdt/fields/FTB_Active__c.field-meta.xml
<CustomField>
    <fullName>FTB_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>