FTB-Community/force-app/main/default/objects/FTB_CMT_HeaderConfigurations__mdt/fields/FTB_AdditionalStyling__c.field-meta.xml
<CustomField>
    <fullName>FTB_AdditionalStyling__c</fullName>
    <label>Additional Styling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>