FTB-Community/force-app/main/default/objects/FTB_CMT_HeaderConfigurations__mdt/fields/FTB_Configuration__c.field-meta.xml
<CustomField>
    <fullName>FTB_Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>FTB_CMT_Configurations__mdt</referenceTo>
    <relationshipLabel>Header Configurations</relationshipLabel>
    <relationshipName>FTB_HeaderConfigurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>