FTB-Community/force-app/main/default/objects/FTB_CMT_HeaderConfigurations__mdt/fields/FTB_Position__c.field-meta.xml
<CustomField>
    <fullName>FTB_Position__c</fullName>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>