FTB-Community/force-app/main/default/objects/FTB_CMT_HeaderConfigurations__mdt/fields/FTB_TextStyle__c.field-meta.xml
<CustomField>
    <fullName>FTB_TextStyle__c</fullName>
    <label>Text Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>